<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.familytracker.ui.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.familytracker.ui.StatusFragment"
        android:label="@string/nav_status" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.familytracker.ui.EmergencyFragment"
        android:label="@string/nav_emergency" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.familytracker.ui.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
